--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js"
   },
   "dependencies": {
     "@types/jest": "^22.1.4",
+    "express": "^4.16.2",
     "ts-jest": "^22.4.1",
+    "ts-loader": "^4.0.1",
     "tsc": "^1.20150623.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
-    "jest": "^22.4.2"
+    "html-webpack-plugin": "^3.0.4",
+    "jest": "^22.4.2",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "jest": {
     "transform": {
